# issue-tracker

./: .dockerignore  .env.docker  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: c1.yml
.svelte-kit/: ambient.d.ts
app/: main.py
app/api/: auth.py  events.py  issue.py
app/core/: config.py  security.py
app/crud/: issue.py  user.py
app/dependencies/: auth.py
app/models/: daily_stats.py  issues.py  user.py
app/schemas/: attachment.py  issues.py
app/utils/: __init__.py  pubsub.py
backend/: .dockerignore  Dockerfile  pyproject.toml  setup.py  test.db
backend/app/: main.py
backend/app/api/: dashboard.py  google_auth.py  issue.py  users.py
backend/app/core/: config.py
backend/app/crud/: attachment.py  issue.py  user.py
backend/app/database/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: attachment.py  issues.py
backend/app/schemas/: attachment.py  dashboard.py  issues.py  user.py
backend/app/services/: auth.py  user.py
backend/app/utils/: aggregator.py  storage.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_dashboard.py  test_google_auth.py  test_issues.py  test_misc.py  test_user_role_change.py
frontend/: .dockerignore  Dockerfile  cypress.config.js  package-lock.json  package.json  playwright.config.mjs  vite.config.js
frontend/src/lib/components/: Navbar.svelte
frontend/src/lib/stores/: auth.js
frontend/src/routes/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/tests/: happy-path.spec.mjs
(+2 files in other folders)
